--- a/Xmen.html
+++ b/Xmen.html
@@ -2,3 +2,11 @@
   <h1> X- men</h1>
 </center>
 <hr>
+
+<p>
+  Does X-Men ever meet Avengers?
+  
+  Avengers vs. X-Men 
+  X-Men (AvX or AvsX) is a 2012 crossover event that was featured in comic books published by Marvel Comics. The event, consisting of an eponymous limited series and numerous tie-in books, involves the return of the Phoenix Force and the subsequent war between the Avengers and the X-Men.
+
+</p>
